<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application wide -->
    <string name="app_name">Jellyfin</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="page_error">The page could not be loaded. Please pull to refresh to try again.</string>

    <!-- Login Fragment -->
    <string name="login_fragment_server_url">Server URL</string>
    <string name="login_fragment_username">Username</string>
    <string name="login_fragment_password">Password</string>
    <string name="login_fragment_login_button_text">Login</string>
    <string name="login_fragment_select_server_text">Select Server:</string>
    <string name="login_fragment_add_a_server_text">Add a server</string>
    <string name="login_fragment_manage_servers_text">Manage Servers</string>
    <string name="login_fragment_error_dialog_title">Login Error</string>
    <string name="login_fragment_error_dialog_ok">OK</string>
    <string name="login_fragment_progress_text">Logging In. Please wait..</string>

    <!-- Add Server Fragment -->
    <string name="add_server_page_title">Manage Servers</string>
    <string name="add_server_dialog_title_add">Add Server</string>
    <string name="add_server_dialog_title_edit">Edit Server</string>
    <string name="add_server_button_label">Add a server</string>
    <string name="add_server_available_servers">Available servers:</string>
    <string name="add_server_no_available_servers">No available servers</string>
    <string name="add_server_server_name">Server Name</string>
    <string name="add_server_server_name_hint">Server Name (e.g. Home Server)</string>
    <string name="add_server_server_url">Server URL</string>
    <string name="add_server_server_url_hint">Server URL (e.g. https://demo.jellyfin.org/stable)</string>
    <string name="add_server_dialog_positive_label">OK</string>
    <string name="add_server_dialog_negative_label">Cancel</string>
    <string name="add_server_menu_save">Save</string>

    <!-- Home Fragment -->
    <string name="home_fragment_load_failed_title">Error</string>
    <string name="home_fragment_load_failed_message">Some items failed to load. Do you want to try again?</string>
    <string name="home_fragment_load_failed_positive_label">Yes</string>
    <string name="home_fragment_load_failed_negative_label">No</string>

    <!-- Home Left Drawer Navigation -->
    <string name="home_activity_navigation_open_drawer">Open left navigation drawer</string>
    <string name="home_activity_navigation_close_drawer">Close left navigation drawer</string>
    <string name="home_activity_navigation_my_media_label">My Media</string>
    <string name="home_activity_navigation_logout">Logout</string>

    <!-- Home Bottom Navigation -->
    <string name="home_activity_navigation_home">Home</string>
    <string name="home_activity_navigation_search">Search</string>

    <!-- Home -> Recent Items -->
    <string name="home_recent_items_play">Play</string>
    <string name="home_recent_items_info">Info</string>

    <!-- Movie and Series Details -->
    <string name="series_play">Play</string>
    <string name="series_imdb">IMDb</string>
    <string name="series_download">Download</string>
    <string name="series_duration_with_units">%1$sh %2$sm</string>

    <!-- Movie Details -->
    <string name="movie_details_item_overview">Overview</string>
    <string name="movie_details_item_genre">Genre</string>
    <string name="movie_details_item_director">Director</string>

    <!-- Player -->
    <string name="initial_time">00:00:00</string>
    <string name="media_duration">%1$s / %2$s</string>
    <string name="subtitle_description">%1$s - %2$s</string>
    <string name="audio_description">%1$s - %2$s</string>

</resources>
