<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movie"
            type="org.jellyfin.client.android.domain.models.display_model.MovieDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="backdrop"
            app:layout_constraintLeft_toLeftOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="140dp"
            android:layout_height="210dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxEms="10"
            android:maxLines="3"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:scrollHorizontally="false"
            android:text="@{movie.name}"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@id/cardview"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="Tom Clancy's Without Remorse. Tom Clancy's Without Remorse. Tom Clancy's Without Remorse. Tom Clancy's Without Remorse." />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{movie.year}"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tvName"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="2021" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:visibility="@{movie.runTimeTicks == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintLeft_toRightOf="@id/tvYear"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="1h 49m" />

        <TextView
            android:id="@+id/tvImdbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawablePadding="6dp"
            android:text="@{movie.communityRating.toString()}"
            android:visibility="@{movie.communityRating == null ? View.GONE : View.VISIBLE}"
            app:drawableLeftCompat="@drawable/ic_star"
            app:layout_constraintLeft_toRightOf="@id/tvRuntime"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="7.3" />

        <TextView
            android:id="@+id/tvTomatoRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawablePadding="6dp"
            android:text="@{movie.criticRating.toString()}"
            android:visibility="@{movie.criticRating == null ? View.GONE : View.VISIBLE}"
            app:drawableLeftCompat="@drawable/ic_tomato"
            app:layout_constraintLeft_toRightOf="@id/tvImdbRating"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="82" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_play"
            android:text="@string/series_play"
            app:layout_constraintStart_toStartOf="@+id/cardview"
            app:layout_constraintTop_toBottomOf="@+id/cardview" />

        <Button
            android:id="@+id/btnImdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_analytics"
            android:text="@string/series_imdb"
            app:layout_constraintLeft_toRightOf="@+id/btnPlay"
            app:layout_constraintTop_toTopOf="@+id/btnPlay" />

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_download"
            android:text="@string/series_download"
            app:layout_constraintLeft_toRightOf="@+id/btnImdb"
            app:layout_constraintTop_toTopOf="@+id/btnPlay" />

        <org.jellyfin.client.android.ui.shared.TitleSubtitleVerticalView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

        <org.jellyfin.client.android.ui.shared.TitleSubtitleVerticalView
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <org.jellyfin.client.android.ui.shared.TitleSubtitleVerticalView
            android:id="@+id/genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/director" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
